<resources>
    <string name="app_name">FITNESS</string>
    <string name="login">LOGIN</string>
    <string name="step1">1</string>
    <string name="step2">2</string>
    <string name="step3">3</string>
    <string name="step4">4</string>
    <string name="step5">5</string>
    <string name="step6">6</string>
    <string name="rest">REST</string>
    <string name="signUp">SIGN UP</string>
    <string name="email">Email</string>
    <string name="my_plans">My Plans</string>
    <string name="Plan">Plan</string>
    <string name="plan_a">A</string>
    <string name="plan_b">B</string>
    <string name="plan_c">C</string>
    <string name="plan_d">D</string>
    <string name="go">GO!</string>
    <string name="plans">Plans</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="get_started">GET STARTED</string>
    <string name="fitness">FITNESS</string>
    <string name="login_to_stay_fit">Login to stay fit</string>
    <string name="sign_up_to_get_fit">Sign Up to get fit</string>
    <string name="signup_sentence">Dont have an account? Sign up now </string>
    <string name="signin_sentence">Already have an account? Login</string>

</resources>