<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0E0E"
    tools:context=".Show_Step">


    <RelativeLayout
        android:id="@+id/show_step_LAY_timer_for_break"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true">

        <ImageView
            android:id="@+id/show_step_IMG_ImgAerobic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/show_step_LBL_time_for_break"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/rubik_bold"
            android:textColor="@color/blue"
            android:textSize="30sp" />

        <ProgressBar
            android:id="@+id/show_step_PGB_countDown_for_break"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="250dp"
            android:layout_height="273dp"
            android:layout_centerInParent="true"
            android:indeterminate="false"
            android:progressDrawable="@drawable/circle" />

        <TextView
            android:id="@+id/show_step_LBL_timeFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/show_step_PGB_countDown_for_break"
            android:layout_centerInParent="true"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/rest"
            android:textColor="@color/blue"
            android:textSize="30sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/show_step_LAY_firstSteps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/show_step_BTN_step1"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/step1"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/blue" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/show_step_BTN_step2"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#88636161"
            android:enabled="false"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/step2"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/show_step_BTN_step3"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#88636161"
            android:enabled="false"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/step3"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/show_step_LAY_secondSteps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_step_LAY_firstSteps"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/show_step_BTN_step4"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#88636161"
            android:enabled="false"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/step4"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/show_step_BTN_step5"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#88636161"
            android:enabled="false"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/step5"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/show_step_BTN_step6"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#88636161"
            android:enabled="false"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/step6"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/show_step_LAY_step"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/show_step_LAY_secondSteps"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/show_step_LBL_stepDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_bold"
                    android:textColor="@color/blue"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/show_step_IMG_stepImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
           >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/show_step_BTN_go"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/go"
                android:textColor="@color/blue"
                android:textSize="20sp"
                />

            <ProgressBar
                android:id="@+id/show_step_PGB_countDown"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerInParent="true"
                android:indeterminate="false"
                android:progress="100"
                android:progressDrawable="@drawable/circle"
               />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>