<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_Up">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_auth" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="#000000" />

    <LinearLayout
        android:id="@+id/login_LAY_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="50dp">

            <ImageView
                android:id="@+id/sign_up_IMG_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                app:tint="@color/blue" />

            <TextView
                android:id="@+id/sign_up_LBL_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/sign_up_to_get_fit"
                android:textColor="@color/blue"
                android:textSize="25dp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_LAY_loginFields"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_LAY_logo"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:src="@drawable/user" />

                <EditText
                    android:id="@+id/sign_up_EDT_userName"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/rubik_bold"
                    android:gravity="left"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:padding="15dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textDirection="ltr" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:src="@drawable/at" />


                <EditText
                    android:id="@+id/sign_up_EDT_email"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:focusable="true"
                    android:fontFamily="@font/rubik_bold"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:src="@drawable/lock" />

                <EditText
                    android:id="@+id/sign_up_EDT_password"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/rubik_bold"
                    android:gravity="left"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textDirection="ltr" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:src="@drawable/lock" />

                <EditText
                    android:id="@+id/sign_up_EDT_ReEnterPassword"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/rubik_bold"
                    android:gravity="left"
                    android:hint="@string/re_enter_password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textDirection="ltr" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_BTN_signUp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/signUp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="50dp"
                app:strokeColor="@color/blue" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_BTN_login"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/signin_sentence"
                android:textColor="@color/white"
                app:cornerRadius="50dp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>