<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">

    <RelativeLayout
        android:id="@+id/open_screen_LAY_themePicture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#0E0E0E">

        <ImageView
            android:id="@+id/profile_IMG_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            android:src="@drawable/sign_out_option"
            app:tint="#1385DF" />

        <ImageView
            android:id="@+id/profile_IMG_plans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingLeft="10dp"
            android:src="@drawable/left_arrow"
            app:tint="#1385DF" />

        <ImageView
            android:id="@+id/profile_IMG_user"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:paddingTop="40dp"
            android:src="@drawable/user__2_" />

        <TextView
            android:id="@+id/profile_LBL_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_IMG_user"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/rubik_bold"
            android:paddingTop="20dp"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_LBL_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_LBL_userName"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/rubik_bold"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profile_LAY_plans"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#FA2D2D2E">

        <TextView
            android:id="@+id/profile_LBL_my_plans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/rubik_bold"
            android:paddingTop="10dp"
            android:text="@string/my_plans"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/profile_LAY_planA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_LBL_my_plans"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profile_BTN_planA"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/plan_a"
                android:textColor="#1385DF"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_LAY_planB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_LAY_planA"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profile_BTN_planB"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/plan_b"
                android:textColor="#1385DF"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_LAY_planC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_LAY_planB"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profile_BTN_planC"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/plan_c"
                android:textColor="#1385DF"
                android:textSize="40sp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>